fix: dark mode marron color (it was yellow for some reason)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,7 +78,7 @@
     --pink: hsl(316 73% 83%);
     --mauve: hsl(276.66 59% 76%);
     --red: hsl(358.81 67% 70%);
-    --maroon: hsl(57.77 65% 75%);
+    --maroon: hsl(358 66% 76%);
     --peach: hsl(20.33 79% 70%);
     --yellow: hsl(39.52 62% 73%);
     --green: hsl(95.83 43% 67%);
